
2012-07-08  GoldenKevin  (revision 97)

	* Renamed script API isQuestFinished to isQuestCompleted.
	* Fixed NullPointerException in QuestChecks.hasPet.
	* Finished all NPC scripts for Henesys area.

2012-07-10  GoldenKevin  (revision 98)

	* Fixed Athena Pierce script.
	* Added Ellinia NPC scripts in the 103200x range.

2012-07-11  GoldenKevin  (revision 99)

	* Fixed problems in InventoryTools with regards to equipped inventory
	handling.
	* Finished Ellinia area scripts (or at least created stubs for them).

2012-07-11  GoldenKevin  (revision 100)

	* Fixed messed up reactor drop source position.
	* Reactor and NPC scripts now are named after the script name fields in
	their respective data files instead of their numeric ID. MCBB users must
	execute default_reactor_scripts.sql and default_npc_scripts.sql.

2012-07-11  GoldenKevin  (revision 101)

	* Fixed player NPC script.

2012-07-14  GoldenKevin  (revision 102)

	* Inventory.increaseCapacity, StorageInventory.increaseCapacity, and
	BuddyList.increaseCapacity nows clip capacities to <= 0xFF. Capacities no
	longer overflow when increased beyond max.
	* Proper packets for increasing inventory capacity. Thanks Vana!
	* Removed null.js. Apparently Duey is not scripted, but instead is
	hardcoded in like shops and storages.
	* Changed sourceName for scripts again. They should be the relative path to
	the executed script file, with the scripts folder as the root directory.

2012-07-14  GoldenKevin  (revision 103)

	* Implemented all Perion area NPCs.

2012-07-14  GoldenKevin  (revision 104)

	* Unignore Eclipse project files outside of trunk since Eclipse project
	should reside in trunk only.

2012-07-16  GoldenKevin  (revision 105)

	* Implemented all Kerning City NPCs in the 10520xx range.
	* Made unscripted NPC notice more legible.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.