@@ -1,0 +1,67 @@
+/*
+ * ArgonMS MapleStory server emulator written in Java
+ * Copyright (C) 2011-2012  GoldenKevin
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+/**
+ * Andre: Hair Salon Assistant (NPC 1052101)
+ * Victoria Road: Kerning City Hair Salon (Map 103000005)
+ *
+ * Kerning City hair changer - random hair.
+ *
+ * @author GoldenKevin (content from KiniroMS r227)
+ */
+
+function getRandomStyle(gender, currentHair) {
+	let color = currentHair % 10;
+	let styles;
+	if (gender == 0)
+		styles = [30130, 30350, 30190, 30110, 30180, 30050, 30040, 30160, 30770, 30620, 30550, 30520];
+	else if (gender == 1)
+		styles = [31060, 31090, 31020, 31130, 31120, 31140, 31330, 31010, 31520, 31440, 31750, 31620];
+	return styles[Math.floor(Math.random() * styles.length)] + color;
+}
+
+function getRandomColor(currentHair) {
+	let style = currentHair - currentHair % 10;
+	return style + Math.floor(Math.random() * 8);
+}
+
+let selection = npc.askMenu("I'm Andre, Don's assistant. Everyone calls me Andre, though. If you have a #b#t5150011##k or a #b#t5151002##k, please let me change your hairdo!\r\n"
+		+ "#L0# Haircut(EXP coupon)#l\r\n"
+		+ "#L1# Dye your hair(REG coupon)#l");
+let item;
+let hair;
+if (selection == 0) {
+	item = 5150011;
+	selection = npc.askYesNo("If you use the EXP coupon your hair will change RANDOMLY with a chance to obtain a new experimental style that I came up with. Are you going to use #b#t5150011##k and really change your hairstyle?");
+	hair = getRandomStyle(npc.getPlayerGender(), npc.getPlayerHair());
+} else if (selection == 1) {
+	item = 5151002;
+	selection = npc.askYesNo("If you use a regular coupon your hair will change RANDOMLY. Do you still want to use #b#t5151002##k and change it up?");
+	hair = getRandomColor(npc.getPlayerHair());
+}
+if (selection == 1) {
+	if (npc.playerHasItem(item, 1)) {
+		npc.takeItem(item, 1);
+		npc.setPlayerHair(hair);
+		npc.say("Enjoy your new and improved hairstyle!");
+	} else {
+		npc.sayNext("Hmmm...it looks like you don't have our designated coupon...I'm afraid I can't give you a haircut without it. I'm sorry...");
+	}
+} else if (selection == 0) {
+	npc.sayNext("I understand...think about it, and if you still feel like changing come talk to me.");
+}
